[gd_scene load_steps=8 format=3 uid="uid://dxu7rbif5y0gi"]

[ext_resource type="Script" path="res://scripts/door.gd" id="1_4unuw"]
[ext_resource type="Texture2D" uid="uid://cfrscuqgrkd5f" path="res://assets/sprites/test_tilesheet.png" id="1_6lshh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gcya7"]
size = Vector2(26, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_167h3"]
size = Vector2(116, 64)

[sub_resource type="Animation" id="Animation_y3bqf"]
resource_name = "open"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -64)]
}

[sub_resource type="Animation" id="Animation_fp83j"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_g8lcy"]
_data = {
"RESET": SubResource("Animation_fp83j"),
"open": SubResource("Animation_y3bqf")
}

[node name="Door" type="AnimatableBody2D"]
script = ExtResource("1_4unuw")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_6lshh")
region_enabled = true
region_rect = Rect2(291, 0, 26, 64)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_gcya7")

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_167h3")
debug_color = Color(0.73051, 0.307564, 0.895737, 0.42)

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_g8lcy")
}

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
